# irh6r

./: CMakeLists.txt  vcpkg.json
src/: XorString.h  base64.h  cpuinfo.h  main.cxx  pch.h
